# DeepMIMO

./: .gitignore  LICENSE  README.md  TESTING_STATUS.md  TEST_REQUIREMENTS.md  breaking_changes.md  dataset_exporter.py  main_new.py  mkdocs.yml  pyproject.toml  testing.py  testing2.py  testing3.py  testing4.py
.cursor/rules/: python-test-commands.mdc
.github/workflows/: ci.yml  coverage.yml
deepmimo/: __init__.py  api.py  config.py  consts.py  dataset.py  general_utils.py  info.py  materials.py  rt_params.py  scene.py  summary.py  txrx.py  web_export.py
deepmimo/api/: __init__.py  _common.py  download.py  search.py  upload.py
deepmimo/converter/sionna_rt/: sionna_exporter.py
deepmimo/converters/: __init__.py  converter.py  converter_utils.py
deepmimo/converters/aodt/: __init__.py  aodt_converter.py  aodt_materials.py  aodt_paths.py  aodt_rt_params.py  aodt_scene.py  aodt_txrx.py  aodt_utils.py  safe_import.py
deepmimo/converters/sionna_rt/: __init__.py  sionna_converter.py  sionna_materials.py  sionna_paths.py  sionna_rt_params.py  (+2 more)
deepmimo/core/: __init__.py  materials.py  rt_params.py  scene.py  txrx.py
deepmimo/dataset/: __init__.py  dataset.py  dynamic_dataset.py  load.py  macro_dataset.py  sampling.py
deepmimo/datasets/: __init__.py  array_wrapper.py  compat_v3.py  dataset.py  generate.py  load.py  sampling.py  stats.py  summary.py  visualization.py
deepmimo/exporters/: __init__.py  aodt_exporter.py  sionna_exporter.py
deepmimo/generator/: __init__.py  ant_patterns.py  array_wrapper.py  channel.py  core.py  dataset.py  generator_utils.py  geometry.py  visualization.py
deepmimo/integrations/: DeepMIMO_Matlab_Integration.m  DeepMIMO_Matlab_Integration.mlx  DeepMIMO_Matlab_Integration.py  __init__.py  sionna_adapter.py  web.py
deepmimo/pipelines/: TxRxPlacement.py  __init__.py  blender_osm.py  osm_to_mitsuba.py  txrx_placement.py
deepmimo/utils/: __init__.py  data_structures.py  dict_utils.py  geometry.py  info.py  io.py  scenarios.py
docs/: index.md  installation.md  manual.ipynb  quickstart.md
docs/api/: config.md  converter.md  core.md  database.md  datasets.md  generator.md  integrations.md  materials.md  pipelines.md  scene.md  utils.md  visualization.md
docs/applications/: 1_channel_prediction.ipynb  1_channel_prediction.py  2_sionna_rt_downstream.ipynb  2_sionna_rt_downstream.py  3_sionna_upstream.ipynb  3_sionna_upstream.py  4_osm_pipeline.ipynb  4_osm_pipeline.py  5_dynamic_rt.ipynb  5_dynamic_rt.py  __init__.py  index.md
docs/asu_campus/: asu_buildings.city  asu_campus.setup  asu_campus.study_area_asu5.xml  asu_campus.txrx  asu_plane.ter
docs/asu_campus1/: asu_campus1.1.LoS.mat  asu_campus1.1.PL.mat  asu_campus1.Loc.mat  asu_campus1.RX_Loc.mat  asu_campus1.TX_Loc.mat  asu_campus1.params.mat
docs/resources/: comparing_raytracers.md  contributing.md  conventions.md  converters_capabilities.md  data_generation.md  specs.md  workflow.md
docs/tutorials/: 1_getting_started.ipynb  1_getting_started.py  2_visualization.ipynb  2_visualization.py  3_channel_generation.ipynb  3_channel_generation.py  4_dataset_manipulation.ipynb  4_dataset_manipulation.py  5_doppler_mobility.ipynb  5_doppler_mobility.py  6_beamforming.ipynb  6_beamforming.py  7_converters.ipynb  7_converters.py  8_migration_guide.ipynb  8_migration_guide.py  __init__.py  index.md  manual.py
docs_old/: conf.py  manual.ipynb
docs_old/api/: database.md  generator.md  visualization.md
scripts/: __init__.py  datasets_stats.py  dm_converter_loop.py  generate_docs_imgs.py  image_processor.py  insite_city_cleaner.py  insite_source_files_cleaner.py  move_insite_folder_out.py  path_type_depth_study.py  pipeline_runner_osm_dynamic.py  pre_render_notebooks.py  presentation_plots.py  rename_single_param_json.py
scripts/pipelines/: params_20cities_t.csv  pipeline_csv_gen.py  pipeline_params.py  pipeline_runner.py  pipeline_runner_dynamic.py  pipeline_runner_osm_dynamic.py  pipeline_runner_osm_static.py  pipeline_runner_static.py  worldcities_t.csv
test/: test_look_at_verification.py
tests/: __init__.py  comp_next_pwr_10.py  plot_antenna_indices_positions.py  read_pl_p2m.py  sample_rows_and_columns.py  test_ant_patterns.py  test_api.py  test_api_advanced.py  test_array_response.py  test_config.py  test_consts.py  test_e2e_flow.py  test_fov.py  test_general_utils.py  test_imports.py  test_info.py  test_look_at_verification.py  test_materials.py  test_rotate_angles.py  test_rt_params.py  test_scene.py  test_sionna_converter.py  test_summary.py  test_trim_by_path_depth.py  test_tutorials.py  test_txrx.py  test_web_export.py
tests/api/: __init__.py  test_api.py  test_api_advanced.py
tests/applications/: conftest.py  test_1_channel_prediction.py
tests/converters/: __init__.py  test_converter.py  test_converter_utils.py
tests/core/: __init__.py  test_materials.py  test_scene.py  test_txrx.py
tests/datasets/: __init__.py  test_array_wrapper.py  test_dataset.py  test_dataset_advanced.py  test_generate.py  test_sampling.py  test_summary.py  test_visualization.py
tests/deepmimo/: test_api.py  test_consts.py  test_core_structures.py  test_e2e_flow.py  test_general_utils.py  test_info.py  test_materials.py  test_rt_params.py  test_scene.py  test_summary.py  test_web_export.py
tests/exporters/: __init__.py  test_aodt_exporter.py  test_sionna_exporter.py  test_sionna_exporter_integration.py
tests/generator/: __init__.py  test_ant_patterns.py  test_array_wrapper.py  test_channel.py  test_core.py  test_dataset.py  test_dataset_advanced.py  test_generator_utils.py  test_geometry.py  test_visualization.py
tests/integrations/: __init__.py  test_sionna_adapter.py
tests/pipelines/: __init__.py
tests/tutorials/: __init__.py  conftest.py  test_1_getting_started.py  test_2_visualization.py  test_3_channel_generation.py  test_4_dataset_manipulation.py  test_5_doppler_mobility.py  test_6_beamforming.py  test_7_converters.py  test_8_migration_guide.py  test_manual.py
tests/utils/: __init__.py  test_general_utils.py
tests/webtests/: README.md  __init__.py  validate_extensions.py
(+98 files in other folders)
