[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepMIMO"
version = "4.0.0b11"
authors = [
    { name = "João Morais" },
    { name = "Umut Demirhan" },
    { name = "Ahmed Alkhateeb" },
]
description = "DeepMIMO dataset generator library"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"  # 3.10 dropped due to bpy constraints; docs require 3.11+
keywords = ["MIMO", "ray tracing", "dataset", "DeepMIMO", "raytracing", "wireless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: OS Independent"
]
dependencies = [
    "matplotlib>=3.8.2",
    "numpy>=1.19.5,<2.3",
    "scipy>=1.6.2",  # only for .mat and ConvexHulls
    "tqdm>=4.59.0",
    "requests"
]

[tool.setuptools.packages.find]
include = ["deepmimo*"]
exclude = ["deepmimo_v3*", "deepmimo_v3.*"]

[project.urls]
Homepage = "https://deepmimo.net/" 

[project.optional-dependencies]

dev = [
    "build",
    "jupyter",
    "twine==6.0.1",
    "ipykernel",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

doc = [
    "sphinx>=7.2.6,<8.0.0",                      # Stable Sphinx
    "myst-parser",                               # Avoids footnote detector error
    "myst-nb>=0.17.2",                           # Notebook support
    "sphinx-autodoc-typehints>=1.25.0",          # Better type hints rendering
    "sphinx-copybutton>=0.5.0",                  # Copy buttons
    "sphinx-automodapi>=0.15.0",                 # Optional: for module API docs
    "sphinxext-opengraph>=0.8.0",                # Social previews
    "sphinx-design>=0.4.1",                      # Grids/cards
    # "sphinx-plotly-directive>=0.1.0",            # Plotly directive
    # "sphinx-contrib-bibtex>=2.6.2",              # Citations
    "ipykernel>=6.0.0",                          # Needed for notebook execution
    "docutils>=0.19",
    # "beautifulsoup4>=4.12.0",
    # "git+https://github.com/pradyunsg/sphinx-remove-toctrees.git"  # ToC pruning
    # Themes
    "sphinx-rtd-theme>=2.0.0",                   # RTD theme
    # "furo",                                      # Works with 2024.8.6
    # MkDocs stack for the new site
    "mkdocs>=1.6",
    "mkdocs-material>=9.7",
    "mkdocs-jupyter>=0.25",
    "pymdown-extensions>=10.0",
    "mkdocs-material-extensions>=1.3",
    # MkDocs API docs
    "mkdocstrings[python]>=0.25",
    "mkdocs-autorefs>=1.2",
    "mkdocs-exclude>=1.0",
    # Signature formatting for mkdocstrings
    "ruff>=0.6.9",
    # Jupyter/platformdirs pins to avoid deprecation warnings
    "jupyter-core>=5.7,<6.0",
    "jupyter-client>=8.6.3",
    "platformdirs>=4.3.0",
    # Better nbconvert handling for Colab MIME quirks
    "nbconvert>=7.16",
    "nbformat>=5.10",
]

aodt = [
    "pandas",   # to read parquet files
    "pyarrow",  # backend for pandas parquet reading 
]

insite = [
    # Common ray tracing pipeline tools
    "utm",               # To be replaced by built-in (see geo_utils.py)
    "lxml",              # To be replaced by built-in (see insite_raytracer.py)
    "pandas",
    "shapely",           # Used to create building polygons (see pipeline_csv_gen.py)
    "bpy==3.6.0; python_version == '3.10'",
    "bpy==4.4.0; python_version == '3.11'",
    "numpy<2.0; python_version == '3.11'",
    "ipykernel",

    # InSite Specific
    "plyfile",           # To read blender ply exports for insite_raytracer.py

]

sionna = [
    # Common ray tracing pipeline tools
    "utm",               # To be replaced by built-in (see geo_utils.py)
    "lxml",              # To be replaced by built-in (see insite_raytracer.py)
    "pandas",
    "shapely",           # Used to create building polygons (see pipeline_csv_gen.py)
    "bpy==3.6.0; python_version == '3.10'",
    "bpy==4.4.0; python_version == '3.11'",
    "numpy<2.0; python_version == '3.11'",
    "ipykernel",

    # Sionna 1.0
    "sionna-rt==1.0.2",  # Sionna Ray Tracer (pins "mitsuba==3.6.2")

    # Development
    "jupyter"
]


# Combination of [dev], [docs], [sionna1], [insite] and [aodt]
all = [
    # Common ray tracing pipeline tools
    "utm",               
    "lxml",              
    "pandas",            
    "shapely",           
    "bpy==3.6.0; python_version == '3.10'",
    "bpy==4.4.0; python_version == '3.11'",
    "numpy<2.0; python_version == '3.11'",
    "ipykernel",

    # InSite
    "plyfile",           
    
    # Sionna
    "sionna-rt==1.0.2",

    # AODT
    "pyarrow",

    # Development
    "build",
    "jupyter",
    "twine==6.0.1",

    # Documentation
    "docutils>=0.19",
    "beautifulsoup4>=4.12.0",
    "myst-parser>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-automodapi>=0.15.0",
    "nbsphinx>=0.9.0",
    "ipykernel>=6.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Incompatible
    "D203",    # 1 blank line required before class docstring (incompatible with D211)
    "D213",    # Multi-line docstring summary should start at the second line (incompatible with D212)
    "COM812",  # Trailing comma missing (conflicts with formatter)

    # Life quality
    "T201",    # Allow "print" in production code
    
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert detected (standard in pytest)
    "PLR2004", # Magic value used in comparison (acceptable in tests)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = [
    "tests/webtests",
    "deepmimo_scenarios",
    "docs",
    "DeepMIMO.egg-info",
]
addopts = "-q"